--- a/source/package.json
+++ b/source/package.json
@@ -46,6 +46,7 @@
     "md5": "^2.2.1",
     "moment": "^2.19.2",
     "node-notifier": "^5.1.2",
+    "normalize.css": "^7.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
