--- a/source/package.json
+++ b/source/package.json
@@ -55,6 +55,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
+    "vue-lazyload": "^1.1.4",
     "vue-loader": "^13.3.0",
     "vue-meta": "^1.3.1",
     "vue-style-loader": "^3.0.1",
